--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta content="I'm Dhruba, currently an undergraduate student at Delhi Technological University(DTU), pursuing B.Tech in Software Engineering(SE)." name="description" />
     <meta content="Dhruba, Dhruba Datta, Dhruba Datta Anjan, DhrubaDattaAnjan, dhruba_datta_anjan, dhruba-datta, dhruba_anjan, Anjan, portfolio, personal website, website, dhaka, bangladesh, DTU, delhi, Delhi Technological University" name="keywords" />
 
+    <!-- open graph meta tag -->
+    <meta property="og:title" content="Dhruba Datta | Portfolio" />
+    <meta property="og:image" content="https://github.com/dhruba-datta/MyPortfolio/blob/main/img/profile-img.jpg" />
+
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
@@ -261,7 +265,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box iconbox-blue">
               <div class="icon">
-                <img width="100" height="100" viewBox="0 0 600 600" src="img/Skills/web.png">
+                <img width="100" height="100" viewBox="0 0 600 600" src="img/Skills/web.png" alt="dhruba datta">
                   <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,521.0016835830174C376.1290562159157,517.8887921683347,466.0731472004068,529.7835943286574,510.70327084640275,468.03025145048787C554.3714126377745,407.6079735673963,508.03601936045806,328.9844924480964,491.2728898941984,256.3432110539036C474.5976632858925,184.082847569629,479.9380746630129,96.60480741107993,416.23090153303,58.64404602377083C348.86323505073057,18.502131276798302,261.93793281208167,40.57373210992963,193.5410806939664,78.93577620505333C130.42746243093433,114.334589627462,98.30271207620316,179.96522072025542,76.75703585869454,249.04625023123273C51.97151888228291,328.5150500222984,13.704378332031375,421.85034740162234,66.52175969318436,486.19268352777647C119.04800174914682,550.1803526380478,217.28368757567262,524.383925680826,300,521.0016835830174"></path>
                 </img>
               </div>
@@ -273,7 +277,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box iconbox-orange ">
               <div class="icon">
-                <img width="100" height="100" viewBox="0 0 600 600" src="img/Skills/dsa.png">
+                <img width="100" height="100" viewBox="0 0 600 600" src="img/Skills/dsa.png" alt="dhruba datta">
                   <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,521.0016835830174C376.1290562159157,517.8887921683347,466.0731472004068,529.7835943286574,510.70327084640275,468.03025145048787C554.3714126377745,407.6079735673963,508.03601936045806,328.9844924480964,491.2728898941984,256.3432110539036C474.5976632858925,184.082847569629,479.9380746630129,96.60480741107993,416.23090153303,58.64404602377083C348.86323505073057,18.502131276798302,261.93793281208167,40.57373210992963,193.5410806939664,78.93577620505333C130.42746243093433,114.334589627462,98.30271207620316,179.96522072025542,76.75703585869454,249.04625023123273C51.97151888228291,328.5150500222984,13.704378332031375,421.85034740162234,66.52175969318436,486.19268352777647C119.04800174914682,550.1803526380478,217.28368757567262,524.383925680826,300,521.0016835830174"></path>
                 </img>
               </div>
@@ -285,7 +289,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box iconbox-pink">
               <div class="icon">
-                <img width="100" height="100" viewBox="0 0 600 600" src="img/Skills/dbms.png">
+                <img width="100" height="100" viewBox="0 0 600 600" src="img/Skills/dbms.png" alt="dhruba datta">
                 <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,521.0016835830174C376.1290562159157,517.8887921683347,466.0731472004068,529.7835943286574,510.70327084640275,468.03025145048787C554.3714126377745,407.6079735673963,508.03601936045806,328.9844924480964,491.2728898941984,256.3432110539036C474.5976632858925,184.082847569629,479.9380746630129,96.60480741107993,416.23090153303,58.64404602377083C348.86323505073057,18.502131276798302,261.93793281208167,40.57373210992963,193.5410806939664,78.93577620505333C130.42746243093433,114.334589627462,98.30271207620316,179.96522072025542,76.75703585869454,249.04625023123273C51.97151888228291,328.5150500222984,13.704378332031375,421.85034740162234,66.52175969318436,486.19268352777647C119.04800174914682,550.1803526380478,217.28368757567262,524.383925680826,300,521.0016835830174"></path>
               </img>
               </div>
@@ -297,7 +301,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box iconbox-yellow">
               <div class="icon">
-                <img width="100" height="100" viewBox="0 0 600 600" src="img/Skills/notes.png">
+                <img width="100" height="100" viewBox="0 0 600 600" src="img/Skills/notes.png" alt="dhruba datta">
                 <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,521.0016835830174C376.1290562159157,517.8887921683347,466.0731472004068,529.7835943286574,510.70327084640275,468.03025145048787C554.3714126377745,407.6079735673963,508.03601936045806,328.9844924480964,491.2728898941984,256.3432110539036C474.5976632858925,184.082847569629,479.9380746630129,96.60480741107993,416.23090153303,58.64404602377083C348.86323505073057,18.502131276798302,261.93793281208167,40.57373210992963,193.5410806939664,78.93577620505333C130.42746243093433,114.334589627462,98.30271207620316,179.96522072025542,76.75703585869454,249.04625023123273C51.97151888228291,328.5150500222984,13.704378332031375,421.85034740162234,66.52175969318436,486.19268352777647C119.04800174914682,550.1803526380478,217.28368757567262,524.383925680826,300,521.0016835830174"></path>
               </img>
               </div>
@@ -309,7 +313,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box iconbox-red">
               <div class="icon">
-                <img width="100" height="100" viewBox="0 0 600 600" src="img/Skills/camera.png">
+                <img width="100" height="100" viewBox="0 0 600 600" src="img/Skills/camera.png" alt="dhruba datta">
                   <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,521.0016835830174C376.1290562159157,517.8887921683347,466.0731472004068,529.7835943286574,510.70327084640275,468.03025145048787C554.3714126377745,407.6079735673963,508.03601936045806,328.9844924480964,491.2728898941984,256.3432110539036C474.5976632858925,184.082847569629,479.9380746630129,96.60480741107993,416.23090153303,58.64404602377083C348.86323505073057,18.502131276798302,261.93793281208167,40.57373210992963,193.5410806939664,78.93577620505333C130.42746243093433,114.334589627462,98.30271207620316,179.96522072025542,76.75703585869454,249.04625023123273C51.97151888228291,328.5150500222984,13.704378332031375,421.85034740162234,66.52175969318436,486.19268352777647C119.04800174914682,550.1803526380478,217.28368757567262,524.383925680826,300,521.0016835830174"></path>
                 </img>
               </div>
@@ -321,7 +325,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box iconbox-teal">
               <div class="icon">
-                <img width="100" height="100" viewBox="0 0 600 600" src="img/Skills/youtube.png">
+                <img width="100" height="100" viewBox="0 0 600 600" src="img/Skills/youtube.png" alt="dhruba datta">
                   <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,521.0016835830174C376.1290562159157,517.8887921683347,466.0731472004068,529.7835943286574,510.70327084640275,468.03025145048787C554.3714126377745,407.6079735673963,508.03601936045806,328.9844924480964,491.2728898941984,256.3432110539036C474.5976632858925,184.082847569629,479.9380746630129,96.60480741107993,416.23090153303,58.64404602377083C348.86323505073057,18.502131276798302,261.93793281208167,40.57373210992963,193.5410806939664,78.93577620505333C130.42746243093433,114.334589627462,98.30271207620316,179.96522072025542,76.75703585869454,249.04625023123273C51.97151888228291,328.5150500222984,13.704378332031375,421.85034740162234,66.52175969318436,486.19268352777647C119.04800174914682,550.1803526380478,217.28368757567262,524.383925680826,300,521.0016835830174"></path>
                 </img>
               </div>
@@ -473,7 +477,7 @@
           <!-- project 01 -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web"> 
             <div class="portfolio-wrap">
-              <img src="img/project/project1.png" class="img-fluid" alt="" />
+              <img src="img/project/project1.png" class="img-fluid" alt="dhruba datta" />
               <div class="portfolio-info">
                 <h4>React App using Google API</h4>
                 <div class="portfolio-links">
@@ -488,7 +492,7 @@
           <!-- project 02 -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web"> 
             <div class="portfolio-wrap">
-              <img src="img/project/project2.png" class="img-fluid" alt="" />
+              <img src="img/project/project2.png" class="img-fluid" alt="dhruba datta" />
               <div class="portfolio-info">
                 <h4>Website using HTML, CSS & JS</h4>
                 <div class="portfolio-links">
@@ -502,7 +506,7 @@
           <!-- project 03 -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-card"> 
             <div class="portfolio-wrap">
-              <img src="img/project/project3.png" class="img-fluid" alt="" />
+              <img src="img/project/project3.png" class="img-fluid" alt="dhruba datta" />
               <div class="portfolio-info">
                 <h4>My Profile Readme</h4>
                 <div class="portfolio-links">
@@ -516,7 +520,7 @@
           <!-- project 04 -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-card"> 
             <div class="portfolio-wrap">
-              <img src="img/project/project4.png" class="img-fluid" alt="" />
+              <img src="img/project/project4.png" class="img-fluid" alt="dhruba datta" />
               <div class="portfolio-info">
                 <h4>Leetcode</h4>
                 <div class="portfolio-links">
@@ -529,7 +533,7 @@
           <!-- project 05 -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web"> 
             <div class="portfolio-wrap">
-              <img src="img/project/project5.png" class="img-fluid" alt="" />
+              <img src="img/project/project5.png" class="img-fluid" alt="dhruba datta" />
               <div class="portfolio-info">
                 <h4>Academic Project in C++</h4>
                 <div class="portfolio-links">
@@ -541,7 +545,7 @@
           <!-- project 06 -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-card"> 
               <div class="portfolio-wrap">
-                <img src="img/project/project6.png" class="img-fluid" alt="" />
+                <img src="img/project/project6.png" class="img-fluid" alt="dhruba datta" />
                 <div class="portfolio-info">
                   <h4>Follow me for future updates</h4>
                   <div class="portfolio-links">
@@ -554,7 +558,7 @@
           <!-- project 07 -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-card"> 
             <div class="portfolio-wrap">
-              <img src="img/project/project7.png" class="img-fluid" alt="" />
+              <img src="img/project/project7.png" class="img-fluid" alt="dhruba datta" />
               <div class="portfolio-info">
                 <h4>Watch my designs on Behance</h4>
                 <div class="portfolio-links">
